Network Stage scripts - version0.0

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,4 +7,7 @@ block content
 
   <!-- Service section-->
   include ./sections/service-section.pug
+
+  <!-- Networkstage section-->
+  include ./sections/network-stage-section.pug
     
