--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -46,10 +46,10 @@ html(lang='en')
     link(rel="stylesheet", href="./css/boilerplate.css")
 
     //- Plugins
+    script(src="https://code.jquery.com/jquery-3.4.1.min.js")
     script(src="./js/greensock/gsap3/gsap.min.js")
     script(src="./js/greensock/gsap3/DrawSVGPlugin.min.js")
     script(src="./js/greensock/gsap3/MotionPathPlugin.min.js")
-    
     script(src="./js/scrollmagic/ScrollMagic.min.js")
     script(src="./js/scrollmagic/plugins/animation.gsap.min.js")
 
