--- a/src/views/sections/service-section.pug
+++ b/src/views/sections/service-section.pug
@@ -1,4 +1,4 @@
-.service-section
+#service-section.service-section
 	#service-animation.service-section__animation-canvas
 		include ../mixins/circle-text-mixin.pug
 		+circle-text('Network Assets')
