Hero banner and other updates

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import './base/variables',
+'./base/functions',
 './base/mixins';
 
 @import './service-section';
 @import './network-stage-section';
+@import './hero-banner';
