--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,8 @@ block title
   title CyberMdxHome
 
 block content
+  <!-- Hero section-->
+  include ./sections/hero-banner-section.pug
 
   <!-- Service section-->
   include ./sections/service-section.pug
