--- a/src/views/sections/service-section.pug
+++ b/src/views/sections/service-section.pug
@@ -2,5 +2,5 @@
 	#service-animation.service-section__animation-canvas
 		include ../mixins/circle-text-mixin.pug
 		+circle-text('Network Assets')
-		+circle-text('Network Assets')
-		+circle-text('Network Assets')
+		+circle-text('Medical IoT<br>Devices')
+		+circle-text('Generic IoT<br>Devices')
