--- a/src/scss/_network-stage-section.scss
+++ b/src/scss/_network-stage-section.scss
@@ -1,6 +1,3 @@
-.offset {
-  height: 100vh;
-}
 
 #network-stage__svg {
   .st0 {
@@ -65,6 +62,19 @@
   opacity: 0;
 
   &__svg {
+    @include media-breakpoint-custom-down($screen-xl) {
+      height: 528px;
+      width: 750px;
+    }
+    @include media-breakpoint-custom-down($screen-md) {
+      height: 382px;
+      width: 560px;
+    }
+    @include media-breakpoint-custom-down($screen-sm) {
+      height: calculatevw(220px, 320px);
+      width: 100%;
+    }
+
     display: block;
     height: 843px;
     margin: 20px auto;
