--- a/src/scss/_service-section.scss
+++ b/src/scss/_service-section.scss
@@ -1,6 +1,4 @@
 // variable service specific
-$blue-color: #423fae;
-$green-color: #2be9af;
 $inner-circle-fill: #fff;
 $inner-circle-stroke: $blue-color;
 $outer-circle-stroke: $green-color;
@@ -10,6 +8,7 @@ $progress-rail-color: $green-color;
 .service-section {
   &__animation-canvas {
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     opacity: 0;
     position: relative;
@@ -18,6 +17,24 @@ $progress-rail-color: $green-color;
 }
 
 .service-box {
+  @include media-breakpoint-custom-down($screen-xl) {
+    margin: 20px 10px;
+  }
+  @include media-breakpoint-custom-down($screen-lg) {
+    height: 200px;
+    margin: 20px 10px;
+    width: 200px;
+  }
+
+  @include media-breakpoint-custom-down($screen-md) {
+    height: 160px;
+    width: 160px;
+  }
+
+  @include media-breakpoint-custom-down($screen-sm) {
+    flex: 0 0 100%;
+    margin: 10px;
+  }
   align-items: center;
   display: flex;
   height: 300px;
@@ -38,7 +55,12 @@ $progress-rail-color: $green-color;
   }
 
   &__title {
+    @include media-breakpoint-custom-down($screen-md) {
+      font-size: 12px;
+      line-height: 1.12;
+    }
     color: $blue-color;
+    text-align: center;
   }
 }
 
@@ -60,6 +82,10 @@ $progress-rail-color: $green-color;
   &__bullet {
     &--a,
     &--b {
+      @include media-breakpoint-custom-down($screen-sm) {
+        display: none!important;
+      }
+
       fill: $bullet-color;
       stroke: none;
     }
@@ -67,6 +93,14 @@ $progress-rail-color: $green-color;
 }
 
 .progress-rail {
+  @include media-breakpoint-custom-down($screen-md) {
+    height: 3px;
+  }
+
+  @include media-breakpoint-custom-down($screen-sm) {
+    display: none!important;
+  }
+
   background: $progress-rail-color;
   height: 5px;
   left: 0;
