--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,3 +13,8 @@ $screen-xl: 1280px;
 $screen-xxl: 1440px;
 $screen-xxxl: 1620px;
 $screen-hd: 1920px;
+
+// Colors
+
+$blue-color: #423fae;
+$green-color: #2be9af;
