--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,4 +12,7 @@ block content
 
   <!-- Networkstage section-->
   include ./sections/network-stage-section.pug
+
+  <!-- Interactive table section-->
+  include ./sections/interactive-table-section.pug
     
