--- a/src/scss/_network-stage-section.scss
+++ b/src/scss/_network-stage-section.scss
@@ -1,49 +1,46 @@
 
 #network-stage__svg {
   .st0 {
-    fill: #bdc1cf;
+    fill: $grey-color;
   }
 
   .st1,
   .st2 {
-    stroke: #bdc1cf;
+    stroke: $grey-color;
     stroke-miterlimit: 10;
   }
 
   .st1 {
-    fill: #423fae;
+    fill: $blue-color;
     stroke-width: 2;
     
   }
 
   .st2 {
-    fill: #bdc1cf;
+    fill: $grey-color;
   }
 
   .st3 {
 
-    fill: #423fae;
+    fill: $blue-color;
+    stroke: $grey-color;
     stroke-width: 2px;
-    stroke: #bdc1cf;
+    
   }
 
   .st4,
   .st5 {
     fill: none;
-    stroke: #423fae;
+    stroke: $blue-color;
     stroke-miterlimit: 10;
   }
 
   .st5 {
-    stroke: #fff;
+    stroke: $white-color;
   }
 
   .st6 {
-    fill: #fff;
-  }
-
-  .st7 {
-    fill: #515359;
+    fill: $white-color;
   }
 
   .st9 {
@@ -58,8 +55,31 @@
   }
 }
 
+.network-section {
+  &__header {
+    @include media-breakpoint-custom-down($screen-sm) {
+      padding-top: 20px;
+    }
+    @include layout-container();
+    padding-top: 80px;
+    text-align: center;
+
+    &-title {
+      @include header-font();
+      color: $blue-color;
+      margin-bottom: 0;
+      margin-top: 0;
+
+    }
+  }
+ 
+}
+
 .network-stage {
+  @include layout-container();
   opacity: 0;
+  position: relative;
+  z-index: 1;
 
   &__svg {
     @include media-breakpoint-custom-down($screen-xl) {
@@ -77,7 +97,7 @@
 
     display: block;
     height: 843px;
-    margin: 20px auto;
+    margin: 0 auto;
     transform-style: preserve-3d;
     width: 1160px;
   }
@@ -98,4 +118,26 @@
     perspective: 1000px;
   }
 
+  &__arrow {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 30%;
+
+    &--prev {
+      justify-content: flex-start;
+      left: 0;
+
+    }
+
+    &--next {
+      justify-content: flex-end;
+      left: auto;
+      right: 0;
+    }
+  }
 }
