--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -86,3 +86,57 @@
   }
 
 }
+
+// Container mixin 
+
+@mixin layout-container() {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+
+// Fonts
+
+@mixin header-font() {
+  @include media-breakpoint-custom-down($screen-lg) {
+    font-size: 26px;
+  }
+
+  @include media-breakpoint-custom-down($screen-sm) {
+    font-size: 18px;
+  }
+
+  font-size: 45px;
+  font-weight: 400;
+  line-height: 1.12;
+}
+
+@mixin featured-font() {
+  @include media-breakpoint-custom-down($screen-lg) {
+    font-size: 18px;
+  }
+  @include media-breakpoint-custom-down($screen-sm) {
+    font-size: 14px;
+  }
+
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.12;
+  
+
+  p {
+    @include media-breakpoint-custom-down($screen-sm) {
+      margin-bottom: 10px;
+      margin-top: 15px;
+    }
+
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+  }
+  
+}
