--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,6 +22,7 @@ $blue-color: #423fae;
 $green-color: #2be9af;
 $grey-color: #bdc1cf;
 $white-color: #fff;
+$pink-color: #ff6168;
 $inner-circle-fill: #fff;
 $inner-circle-stroke: $blue-color;
 $outer-circle-stroke: $green-color;
