--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,4 +6,6 @@
 @import './service-section';
 @import './network-stage-section';
 @import './interactive-table-section';
+@import './how-it-works-section';
+@import './benefits-banner';
 @import './hero-banner';
