--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,8 +10,17 @@ block content
   <!-- Service section-->
   include ./sections/service-section.pug
 
+  <!-- Benefits banner section -->
+  include ./sections/benefits-banner-section.pug
+
+  <!-- How it works section-->
+  include ./sections/how-it-works.pug
+
   <!-- Networkstage section-->
   include ./sections/network-stage-section.pug
+
+  div.section-seperator
+    hr.seperator.seperator--blue
 
   <!-- Interactive table section-->
   include ./sections/interactive-table-section.pug
