--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -52,6 +52,7 @@ html(lang='en')
     script(src="./js/greensock/gsap3/MotionPathPlugin.min.js")
     script(src="./js/scrollmagic/ScrollMagic.min.js")
     script(src="./js/scrollmagic/plugins/animation.gsap.min.js")
+    script(src="./js/slick.min.js")
 
   body
     .body-container-wrapper
