--- a/src/views/sections/interactive-table-section.pug
+++ b/src/views/sections/interactive-table-section.pug
@@ -1,2 +1,6 @@
 #interactive-table-section
-	include ../components/interactive-table.pug
+	.interactive-table-section__header
+		h2.interactive-table-section__title Our solution integrates with your current systems, shrinking your solution stack and delivering greater insights and enhanced capabilities
+
+	.interactive-table-section__table
+		include ../components/interactive-table.pug
