--- a/src/views/sections/network-stage-section.pug
+++ b/src/views/sections/network-stage-section.pug
@@ -3,7 +3,7 @@
     p.network-section__header-title
       b Agentless and Flexible Deployment:<br>
       | Centralized architecture for simple and scalable deployment across large distributed networks
-  div#network-stage.network-stage
+  div.network-section__network-stage#network-stage.network-stage
     div.network-stage__canvas
       include ../components/network-stage-component.pug
       include ../mixins/arrow-mixin.pug
