--- a/src/views/sections/service-section.pug
+++ b/src/views/sections/service-section.pug
@@ -4,7 +4,7 @@
 		div.service-section__para
 			p Our scalable, easy-to-deploy security solution works to ensure your organization’s operational safety, compliance and continuity through continuous asset discovery, comprehensive risk profiling, and AI-powered containment and response capabilities. 
 			p The CyberMDX solution identifies endpoints and assesses vulnerabilities to detect, respond to and prevent cyber incidents.
-	.service-chart
+	.service-chart.service-section__chart
 		.service-chart__header
 			h2.service-chart__title We identify, optimize and secure 
 		#service-animation.service-chart__animation-canvas
