--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,8 @@
 @import './how-it-works-section';
 @import './benefits-banner';
 @import './hero-banner';
+
+.detect-animate {
+  opacity: 0;
+  visibility: hidden;
+}
