--- a/src/views/sections/benefits-banner-section.pug
+++ b/src/views/sections/benefits-banner-section.pug
@@ -1,7 +1,7 @@
 div#benefits-banner-section
 	.benefits-banner
 		.benefits-banner__container
-			.benefits-banner__row
+			.benefits-banner__row.detect-animate(data-animation="from-bottom--stagger")
 				.benefits-banner__col.benefits-banner__col--text
 					p.benefits-banner__content 
 						b Cross-departmental Benefits: 
