--- a/src/views/sections/how-it-works.pug
+++ b/src/views/sections/how-it-works.pug
@@ -1,6 +1,6 @@
 include ../mixins/slide-mixin.pug
 include ../mixins/arrow-mixin.pug
-#how-it-works-section
+#how-it-works-section.detect-animate(data-animation="from-bottom--stagger")
   div.how-it-works-section__header
     h2.how-it-works-section__title How it works
   div.how-it-works-section__carousel
