--- a/src/views/sections/interactive-table-section.pug
+++ b/src/views/sections/interactive-table-section.pug
@@ -1,4 +1,4 @@
-#interactive-table-section
+#interactive-table-section.detect-animate(data-animation="from-bottom--stagger")
 	.interactive-table-section__header
 		h2.interactive-table-section__title Our solution integrates with your current systems, shrinking your solution stack and delivering greater insights and enhanced capabilities
 
