--- a/src/views/sections/network-stage-section.pug
+++ b/src/views/sections/network-stage-section.pug
@@ -1,4 +1,4 @@
-#network-section
+#network-section.detect-animate(data-animation="from-bottom--stagger")
   header.network-section__header
     p.network-section__header-title
       b Agentless and Flexible Deployment:<br>
