--- a/src/scss/_service-section.scss
+++ b/src/scss/_service-section.scss
@@ -25,7 +25,7 @@
   }
 
   &__para {
-    @include featured-font();
+    @include body-font();
   }
 }
 
@@ -75,11 +75,11 @@
   }
   align-items: center;
   display: flex;
-  height: 300px;
+  height: 280px;
   justify-content: center;
   margin: 20px 40px;
   position: relative;
-  width: 300px;
+  width: 280px;
   z-index: 1;
 
   &__circle {
