--- a/src/scss/_benefits-banner.scss
+++ b/src/scss/_benefits-banner.scss
@@ -35,7 +35,7 @@
       padding: 20px 0;
       text-align: center;
     }
-    @include featured-font();
+    @include body-font();
     color: $blue-color;
     margin: 0;
     padding: 40px 0;
@@ -48,12 +48,12 @@
       padding: 15px 10px;
       text-align: center;
     }
-    @include featured-font();
+    @include body-font();
     background: $blue-color;
     color: $white-color;
     display: block;
     font-weight: 700;
-    padding: 30px 20px;
+    padding: 20px 10px;
     text-align: center;
     transition: ease .3s;
 
