--- a/src/scss/_how-it-works-section.scss
+++ b/src/scss/_how-it-works-section.scss
@@ -68,7 +68,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    margin: 40px 0 80px;
+    margin: 20px 0 60px;
 
 
 
@@ -88,15 +88,15 @@
       align-items: center;
       background: lighten($blue-color, 10%);
       border: 4px solid $white-color;
-      border-radius: 50%;
+      border-radius: 30px;
       cursor: pointer;
       display: flex;
-      height: 80px;
-      margin: 0 20px;
+      height: 60px;
+      margin: 0 10px;
       overflow: hidden;
       position: relative;
       transition: ease .4s;
-      width: 80px;
+      width: 60px;
 
       &-number {
         @include media-breakpoint-custom-down($screen-lg) {
@@ -107,9 +107,9 @@
           font-size: 18px;
           padding: 0 14px;
         }
-        font-size: 45px;
+        font-size: 26px;
         font-weight: 700;
-        padding: 0 24px;
+        padding: 0 20px;
       }
 
       &-text {
@@ -124,8 +124,8 @@
 
         }
 
-        font-size: 45px;
-        left: 75px;
+        font-size: 26px;
+        left: 50px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -139,15 +139,15 @@
           width: 150px;
         }
         border-radius: 50px;
-        width: 290px;
+        width: 190px;
       }
     }
   }
 }
 
 .steps-slide {
-  padding-left: 20px;
-  padding-right: 20px;
+  //padding-left: 20px;
+  //padding-right: 20px;
 
   &__row {
     @include media-breakpoint-custom-down($screen-sm) {
@@ -181,12 +181,13 @@
   &__article {
     &-title, 
     &-list {
-      @include  body-font();
+      @include featured-font();
     }
 
     &-list {
+      @include body-font();
       margin: 10px 0;
-      padding-left: 1em;
+      padding-left: 1.2em;
     }
 
     margin-bottom: 2em;
