--- a/src/views/sections/network-stage-section.pug
+++ b/src/views/sections/network-stage-section.pug
@@ -1,8 +1,8 @@
 #network-section.detect-animate(data-animation="from-bottom--stagger")
   header.network-section__header
-    p.network-section__header-title
-      b Agentless and Flexible Deployment:<br>
-      | Centralized architecture for simple and scalable deployment across large distributed networks
+    div.network-section__header-title
+      h2.network-section__header-title-h2 Agentless and Flexible Deployment:
+      p.network-section__header-title-para Centralized architecture for simple and scalable deployment across large distributed networks
   div.network-section__network-stage#network-stage.network-stage
     div.network-stage__canvas
       include ../components/network-stage-component.pug
