--- a/src/scss/_network-stage-section.scss
+++ b/src/scss/_network-stage-section.scss
@@ -108,7 +108,7 @@
     height: 843px;
     margin: 0 auto;
     transform-style: preserve-3d;
-    width: 1160px;
+    width: 100%;
   }
 
   &__branches {
