--- a/src/views/components/interactive-table.pug
+++ b/src/views/components/interactive-table.pug
@@ -6,7 +6,7 @@ include ../mixins/interactive-table-expander-mixin.pug
       .interactive-table__row
         .interactive-table__col.interactive-table__col--full.interactive-table__col--justify-center.interactive-table__col--align-center
           div.interactive-table__header-cell
-            img(src=require("images/logos/mdx-logo.png"), alt="")
+            img(src=require("images/logos/mdx-logo.svg"), alt="")
             h5.interactive-table__header-title Open RESTful API
     .interactive-table__body
       .interactive-table__row
