--- a/src/scss/_how-it-works-section.scss
+++ b/src/scss/_how-it-works-section.scss
@@ -109,6 +109,7 @@
         }
         font-size: 26px;
         font-weight: 700;
+        line-height: 1;
         padding: 0 20px;
       }
 
@@ -126,6 +127,7 @@
 
         font-size: 26px;
         left: 50px;
+        line-height: 1;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
