--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,13 +15,16 @@ $screen-xxxl: 1620px;
 $screen-hd: 1920px;
 
 $container-max-width: 1200px;
+$container-max-width-smaller: 760px;
 $container-max-width-laptops: 1024px;
+
 
 $interactive-table-bp: $screen-sm;
 
 // Colors
 
 $blue-color: #423fae;
+$light-blue-color: #00afd2;
 $green-color: #2be9af;
 $grey-color: #bdc1cf;
 $white-color: #fff;
