--- a/src/views/sections/service-section.pug
+++ b/src/views/sections/service-section.pug
@@ -1,6 +1,6 @@
 #service-section.service-section
 	article.service-section__article.detect-animate(data-animation="from-bottom--stagger")
-		h2.service-section__title Visibility and threat prevention for<br>medical devices and clinical assets
+		h2.service-section__title Visibility and threat prevention for medical devices and clinical assets
 		div.service-section__para
 			p Our scalable, easy-to-deploy security solution works to ensure your organization’s operational safety, compliance and continuity through continuous asset discovery, comprehensive risk profiling, and AI-powered containment and response capabilities. 
 			p The CyberMDX solution identifies endpoints and assesses vulnerabilities to detect, respond to and prevent cyber incidents.
