--- a/src/scss/_service-section.scss
+++ b/src/scss/_service-section.scss
@@ -22,6 +22,10 @@
   &__title {
     @include header-font();
     color: $blue-color;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 830px;
+    
   }
 
   &__para {
