--- a/src/views/components/hero-banner-component.pug
+++ b/src/views/components/hero-banner-component.pug
@@ -10,14 +10,14 @@
           .hero-banner__title
             h1.hero-banner__title-h1
               span.hero-banner__title-line
-                span.hero-banner__title-span 
+                span.hero-banner__title-word-wrapper 
                   span.hero-banner__title-word &nbsp;Identify,
-                span.hero-banner__title-span 
+                span.hero-banner__title-word-wrapper 
                   span.hero-banner__title-word &nbsp;classify,
               span.hero-banner__title-line
-                span.hero-banner__title-span 
+                span.hero-banner__title-word-wrapper 
                   span.hero-banner__title-word &nbsp;optimize,
-                span.hero-banner__title-span 
+                span.hero-banner__title-word-wrapper 
                   span.hero-banner__title-word &nbsp;secure
 
       
