--- a/src/views/components/network-stage-component.pug
+++ b/src/views/components/network-stage-component.pug
@@ -105,7 +105,7 @@ svg#network-stage__svg.network-stage__svg(version='1.1', xmlns='http://www.w3.or
         path.st5(d='M251.7 216.8h32.6c.7 0 1.3-.6 1.3-1.3v-18.7c0-.7-.6-1.3-1.3-1.3h-32.6c-.7 0-1.3.6-1.3 1.3v18.7c.1.8.6 1.3 1.3 1.3z')
         path.st5(d='M256.5 202.5h23.1m-3 3l3-3-3-3M256.5 210h23.1m-20.1-3l-3 3 3 3')
 
-  g#branch-f
+  g#branch-f.network-stage__branches
     path.st3.active-dot(d='M199.5 332.1c-3.3 1.9-8.5 1.9-11.8 0-3.2-1.9-3.2-4.9 0-6.8 3.3-1.9 8.5-1.9 11.8 0 3.2 1.9 3.2 5 0 6.8')
     path.st4.active-line-a(d='M193.4 329.2v-62.8')
     text.active-text-a(transform='translate(38.888 272.04)')
